wishlist visibility switches, fixes

--- a/templates/NOVA/themes/clear/sass/_base.scss
+++ b/templates/NOVA/themes/clear/sass/_base.scss
@@ -2912,3 +2912,13 @@ a.nice-deco {
     }
   }
 }
+
+.clickable-row {
+  cursor: pointer;
+}
+
+.subheadline {
+  font-weight: $font-weight-bold;
+  margin-bottom: $spacer;
+  display: block;
+}
